Fix input on mobile

--- a/frontend/src/components/styles/inputs.css
+++ b/frontend/src/components/styles/inputs.css
@@ -93,7 +93,7 @@
 	border-bottom-right-radius: 5px;
 	border-top-right-radius: 5px;
 	height: 34px;
-	min-width: 50px;
-	max-width: 50px;
-	margin: 20px 0 0 -1px;
+	min-width: 57px;
+	max-width: 57px;
+	margin: 20px 0 0 -5px;
 }
